<resources>
    <string name="app_name">Pokedex</string>

    <string name="nav_menu_list">Pokedex</string>
    <string name="nav_menu_credits">Credits</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_pokedex">Pokedex</string>
    <string name="title_credits">Credits</string>

    <string name="pokemon_item_number">#%d</string>
    <string name="btn_retry_text">Retry</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="stats">Stats</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="special_attack">Special Attack</string>
    <string name="special_defense">Special Defense</string>
    <string name="speed">Speed</string>
    <string name="by_andrea_amatucci">by Andrea Amatucci</string>

    <string name="details">Details</string>
    <string name="error_loading_list">Couldn\'t refresh pokemon list</string>
    <string name="title_activity_main_compose">MainComposeActivity</string>
</resources>